Added new static method to JobDAO for retrieving the JobStatus for a job with a given JobId. This new method should be used in the HarvestMonitorServer.visit(CrawlProgressMessage msg)